# ext.discord-music-rpc

./: .env.template  .pre-commit-config.yaml  README.md  build.sh  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
discord_music_rpc/: __init__.py  __main__.py  api.py  config.py  discord_rpc.py  main.py  music_sources.py  tray.py  utils.py
discord_music_rpc/meta_sources/: lastfm.py
discord_music_rpc/sources/: __init__.py  lastfm.py  plex.py  soundcloud.py  sources.py  spotify.py
extensions/: discord-music-rpc-helper.user.js
