[project]
name = "discord-music-rpc"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.0.0",
    "plexapi>=4.16.0",
    "pydantic>=2.10.3",
    "pypresence @ git+https://github.com/qwertyquerty/pypresence.git@f856ccaaeb2321f64f9692b75dc3ceda5c927f42",
    "pystray>=0.19.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "soundcloud-v2>=1.6.0",
    "spotipy>=2.24.0",
    "websockets>=14.1",
]

[project.urls]
"Homepage" = "https://github.com/f0e/discord-music-rpc"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "nuitka>=2.5.6",
    "pre-commit>=4.0.1",
    "ruff>=0.8.2",
]

[tool.ruff]
lint.extend-select = ["I"] # enable import sorting

[tool.mypy]
check_untyped_defs = true

[tool.hatch.metadata]
allow-direct-references = true # allow git dependencies todo: why do i need to do this

[project.scripts]
discord-music-rpc = "discord_music_rpc.main:main"
